--- a/chat/package.json
+++ b/chat/package.json
@@ -16,6 +16,7 @@
     "http": "0.0.0",
     "io": "0.0.9",
     "require": "^2.4.20",
+    "socket.io": "^1.3.6",
     "socket.io-client": "^1.3.6",
     "socket.io-parser": "^2.2.4",
     "supertest": "^1.1.0"
